--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,72 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
+
+
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 /* Dev */
 header,
 header * {
-    outline: 1px blue dahed;
+    outline: 1px blue dash ed;
 }
 
 /* Dep */
 header {
     display: flex;
     justify-content: space-between;
-    padding: .4rem 5vw ;
+    padding: .7rem 5vw ;
     align-items: center;
     position: fixed;
-    width: 90vw;
+    width: 100vw;
+    height: 7vw;
     top: 0;
     left: 0;
-    background-color: rgba(114, 170, 219, 0.616);
+    backgr ound: #00000058;
+    color:#fff;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 400;
+    
 
+}
+
+.links{
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.3rem;
+}
+
+nav,
+.links a{
+    display: flex;
+    text-decoration: none;
+
+}
+
+
+nav {
+    justify-content: space-around;
+    align-items: center;
+    height: 7vh;
+}
+
+
+
+body {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),url(/assets/img/wallpaperOne.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: 100%;
+
+
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 section.hero,
@@ -29,79 +75,119 @@ section.hero * {
 }
 
 
-header button {
-    padding: .5rem 1rem;
-    border: none;
-    background: transparent;
-    font-weight: 600;
-    cursor: pointer;
-    transition: .3s ease-in-out;
-    height: 6vh;
-    border-bottom: 2px transparent;
 
-    &:hover {
-        background-color: rgba(152, 231, 231, 0.662);
-        border-bottom: 2px rgb(0, 42, 255) solid;
-    }
-
-    &:active {
-        transition: .1s ease-in-out;
-        color: white;
-        background-color: rgba(9, 58, 58, 0.662);
-        border-bottom: 2px rgb(0, 42, 255) solid;
-    }
-}
-
-section.hero {
+#home {
     display: flex;
     margin: .3rem 5vw 0;
     height: 94vh;
     padding-top: 5vh;
+    text-decoration: none;
 
-    & .right{
+    & .rightSide{
         width: 70vh;
     }
 
-    & .left{
+    & .leftSide{
         width: 130vh
     }
 
 }
 
-section.hero .left {
+#home .leftSide {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     gap: 30px;
+    font-family: "Josefin Sans", sans-serif;
+    backgr ound: #00000084;
+    margin-top: 10.4%;
+    margin-bottom: 8%;
+    border-radius: 50px;
+    color: #fff;
+
 
     & h3{
         font-size: 1.9rem;
+        font-weight: 300;
+
     }
 
     & h1{
-        font-size: 2.9rem;
+        font-size: 3rem;
+        font-weight: 500;
     }
 
     & h2{
         font-size: 2.2rem;
+        font-weight: 200;
     }
 
-    & p{
-        font-size: 1.5rem;
-    }
 
     & span{
-        color: rgb(15, 51, 194);
+        color: rgb(97, 145, 170);
     }
 }
 
-section.hero .right img {
-    width: 100%;
-    height: 80%;
+.text_p1 {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: #ffffff82;
+    margin-bottom: -0.7rem;
+    margin-right: 610px;
+
+}
+
+#home .rightSide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -20px;
+    margin-left: ;
+    width: 50%;
+}
+
+#home .rightSide img {
+    display: flex;
+    width: 70%;
+    height: auto;
     object-fit: cover;
-    object-position: top;
-    
+ 
+
+}
+
+.homeIcons {
+    display: flex;
+    align-items: center;
+    background: #a5a5a512;
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+    height: 12%;
+    border-radius: 50px;
+}
+
+.icon1 {
+    color: #072a5c;
+    font-size: 30px;
+}
+
+.icon2 {
+    font-size:30px;
+    background: #d6249f;
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.icon3 {
+    color: #12d0ff;
+    font-size: 30px;
+}
+
+#aboutme{
+    padding-top: 1000px;
 }
 
 #education {
@@ -110,6 +196,7 @@ section.hero .right img {
     gap: 20px;
     otline: 5px solid red;
     margin-bottom: 30rem;
+    padding-top: 70px;
 
     & h1{
         font-size: 5rem;
@@ -132,6 +219,9 @@ section.hero .right img {
     gap: 20px;
     outine: 5px solid red;
     margin-bottom: 30rem;
+    padding-top: 70px;
+    text-decoration: none;
+
 
     & h1{
         font-size: 5rem;
@@ -147,3 +237,48 @@ section.hero .right img {
     }
 
 }
+
+/* unvisited link */
+a:link {
+    color: rgb(255, 255, 255);
+  }
+  
+  /* visited link */
+  a:visited {
+    color: rgb(249, 249, 249);
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: rgb(7, 6, 6);
+    transition: all 200ms ease;
+  }
+
+
+  a {
+    position: relative; /* Establishes a positioning context for the ::before pseudo-element */
+    text-decoration: none; /* Optionally remove the default underline */
+}
+
+  a::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: -5px;
+    left: 0;
+    background-color: #000;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+    
+  }
+
+  a:hover::before {
+    transform: scaleX(1);
+  }
+
+  /* selected link */
+  a:active {
+    color: rgb(255, 255, 255);
+  }
