--- a/pages/hobbiesPage/assets/css/style.css
+++ b/pages/hobbiesPage/assets/css/style.css
@@ -58,7 +58,7 @@ nav {
 
 
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),url(/assets/img/wallpaperOne.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),url(../img/wallpaperOne.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
